--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Node API Challenge",
   "main": "index.js",
   "scripts": {
-    "db:seed": "knex seed:run"
+    "db:seed": "knex seed:run",
+    "server": "nodemon",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,7 @@
   "dependencies": {
     "helmet": "^3.21.2",
     "knex": "^0.20.9",
+    "nodemon": "^2.0.2",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
